# KeyboardEmulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-msys2-qt6.yml
src/: AbstractItem.cpp  AbstractItem.h  ButtonItem.cpp  ButtonItem.h  ComPortMenu.cpp  ComPortMenu.h  CustomScene.cpp  CustomScene.h  DiodeItem.cpp  DiodeItem.h  DiodeSyncService.cpp  DiodeSyncService.h  IFileDialogService.h  IMessageService.h  ImageZoomWidget.cpp  ImageZoomWidget.h  KeyboardController.cpp  KeyboardController.h  KeyboardControllerProtocol.h  MainWindow.cpp  MainWindow.h  Project.cpp  Project.h  ProjectIO.cpp  ProjectIO.h  QtFileDialogService.cpp  QtFileDialogService.h  QtMessageService.cpp  QtMessageService.h  RecentProjects.cpp  RecentProjects.h  ResizableRectItem.cpp  ResizableRectItem.h  ResizeHandle.cpp  ResizeHandle.h  SceneController.cpp  SceneController.h  SerialPortConnectionManager.cpp  SerialPortConnectionManager.h  SerialPortModel.cpp  (+12 more)
src/protocol/: CommandDefinition.h  KeyboardControllerProtocol.h  PinsDefinition.h
style-check/: run_clang-tidy.sh  run_clazy.sh
test/: controller_emulator.py  protocol.py  serial_port.py  states.py
